distr/src/platform/linux/out.txt
In file included from ../../javavm/classes.h:9,
                 from ../../javavm/memory.h:4,
                 from platform_native.c:10:
./platform_config.h:28:33: error: unknown type name ‘pack’
   28 | #define __PACKED(DEC)  __pragma(pack(push, 1)) DEC __pragma(pack(pop))
      |                                 ^~~~
../../javavm/classes.h:41:9: note: in expansion of macro ‘__PACKED’
   41 | typedef __PACKED(struct S_Object
      |         ^~~~~~~~
./platform_config.h:28:61: error: unknown type name ‘pack’
   28 | #define __PACKED(DEC)  __pragma(pack(push, 1)) DEC __pragma(pack(pop))
      |                                                             ^~~~
../../javavm/classes.h:41:9: note: in expansion of macro ‘__PACKED’
   41 | typedef __PACKED(struct S_Object
      |         ^~~~~~~~
./platform_config.h:28:33: error: unknown type name ‘pack’
   28 | #define __PACKED(DEC)  __pragma(pack(push, 1)) DEC __pragma(pack(pop))
      |                                 ^~~~
../../javavm/classes.h:98:9: note: in expansion of macro ‘__PACKED’
   98 | typedef __PACKED(struct S_Thread
      |         ^~~~~~~~
./platform_config.h:28:61: error: unknown type name ‘pack’
   28 | #define __PACKED(DEC)  __pragma(pack(push, 1)) DEC __pragma(pack(pop))
      |                                                             ^~~~
../../javavm/classes.h:98:9: note: in expansion of macro ‘__PACKED’
   98 | typedef __PACKED(struct S_Thread
      |         ^~~~~~~~
./platform_config.h:28:33: error: unknown type name ‘pack’
   28 | #define __PACKED(DEC)  __pragma(pack(push, 1)) DEC __pragma(pack(pop))
      |                                 ^~~~
../../javavm/classes.h:121:9: note: in expansion of macro ‘__PACKED’
  121 | typedef __PACKED(struct S_Runtime
      |         ^~~~~~~~
./platform_config.h:28:61: error: unknown type name ‘pack’
   28 | #define __PACKED(DEC)  __pragma(pack(push, 1)) DEC __pragma(pack(pop))
      |                                                             ^~~~
../../javavm/classes.h:121:9: note: in expansion of macro ‘__PACKED’
  121 | typedef __PACKED(struct S_Runtime
      |         ^~~~~~~~
./platform_config.h:28:33: error: unknown type name ‘pack’
   28 | #define __PACKED(DEC)  __pragma(pack(push, 1)) DEC __pragma(pack(pop))
      |                                 ^~~~
../../javavm/classes.h:129:9: note: in expansion of macro ‘__PACKED’
  129 | typedef __PACKED(struct S_String
      |         ^~~~~~~~
./platform_config.h:28:61: error: unknown type name ‘pack’
   28 | #define __PACKED(DEC)  __pragma(pack(push, 1)) DEC __pragma(pack(pop))
      |                                                             ^~~~
../../javavm/classes.h:129:9: note: in expansion of macro ‘__PACKED’
  129 | typedef __PACKED(struct S_String
      |         ^~~~~~~~
In file included from platform_native.c:10:
../../javavm/memory.h:22:25: error: unknown type name ‘Object’
   22 | extern void free_array (Object *objectRef);
      |                         ^~~~~~
../../javavm/memory.h:24:8: error: unknown type name ‘Object’
   24 | extern Object *new_object_checked (const byte classIndex, byte *btAddr);
      |        ^~~~~~
../../javavm/memory.h:25:8: error: unknown type name ‘Object’
   25 | extern Object *new_object_for_class (const byte classIndex);
      |        ^~~~~~
../../javavm/memory.h:26:8: error: unknown type name ‘Object’
   26 | extern Object *new_primitive_array (const byte primitiveType, STACKWORD length);
      |        ^~~~~~
../../javavm/memory.h:27:8: error: unknown type name ‘Object’
   27 | extern Object *reallocate_array(Object *obj, STACKWORD newlen);
      |        ^~~~~~
../../javavm/memory.h:27:33: error: unknown type name ‘Object’
   27 | extern Object *reallocate_array(Object *obj, STACKWORD newlen);
      |                                 ^~~~~~
../../javavm/memory.h:28:8: error: unknown type name ‘Object’
   28 | extern Object *new_multi_array (byte elemType, byte totalDimensions, byte reqDimensions, STACKWORD *numElemPtr);
      |        ^~~~~~
In file included from platform_hooks.h:10,
                 from platform_native.c:12:
../../javavm/language.h:126:30: error: unknown type name ‘Object’
  126 | extern byte get_class_index (Object *obj);
      |                              ^~~~~~
../../javavm/language.h:127:31: error: unknown type name ‘Object’
  127 | extern void dispatch_virtual (Object *obj, TWOBYTES signature, byte *rAddr);
      |                               ^~~~~~
../../javavm/language.h:129:31: error: unknown type name ‘Object’
  129 | extern STACKWORD instance_of (Object *obj, byte classIndex);
      |                               ^~~~~~
In file included from platform_native.c:12:
platform_hooks.h:29:39: error: unknown type name ‘Object’
   29 | extern void handle_uncaught_exception(Object *exception,
      |                                       ^~~~~~
platform_hooks.h:30:8: error: unknown type name ‘Thread’
   30 |  const Thread *thread,
      |        ^~~~~~
platform_native.c: In function ‘exit_tool’:
platform_native.c:32:3: warning: format not a string literal and no format arguments [-Wformat-security]
   32 |   printf(exitMessage);
      |   ^~~~~~
platform_native.c: At top level:
platform_native.c:44:32: error: unknown type name ‘Object’
   44 | void handle_uncaught_exception(Object *exception,
      |                                ^~~~~~
platform_native.c:45:8: error: unknown type name ‘Thread’
   45 |  const Thread *thread,
      |        ^~~~~~
